feat: proposer config and teku hot reload

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 ETHERFI_SC_IPFS_GATEWAY=https://ether-fi-mainnet.infura-ipfs.io/ipfs
 ETHERFI_SC_BIDDER=0xF88866238ecE28A41e050b04360423a5d1181d49
-ETHERFI_SC_GRAPH_URL=https://api.studio.thegraph.com/query/41778/etherfi-mainnet/0.0.3
+ETHERFI_SC_GRAPH_URL=https://api.studio.thegraph.com/query/41778/etherfi-mainnet/0.0.4
 ETHERFI_SC_PRIVATE_KEYS_FILE_LOCATION=/privateEtherfiKeystore.json
 ETHERFI_SC_OUTPUT_LOCATION=/_storage_
 ETHERFI_SC_PASSWORD=Password123!
+ETHERFI_SC_TEKU_PROPOSER_FILE=/teku_proposer_config.json
