--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto": "^1.0.1",
     "elliptic": "^6.5.4",
     "ethers": "^5.7.2",
+    "got": "^13.0.0",
     "graphql": "^16.6.0",
     "graphql-request": "^5.2.0"
   },
