--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bn.js": "^5.2.1",
     "cron": "^2.3.0",
     "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
     "elliptic": "^6.5.4",
     "ethers": "^5.7.2",
     "got": "^13.0.0",
