feat: kubernetes restarter

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ ETHERFI_SC_PRIVATE_KEYS_FILE_LOCATION=/privateEtherfiKeystore.json
 ETHERFI_SC_OUTPUT_LOCATION=/_storage_
 ETHERFI_SC_PASSWORD=Password123!
 ETHERFI_SC_TEKU_PROPOSER_FILE=/teku_proposer_config.json
+# docker, kubernetes or none
+ETHERFI_SC_RESTART_MODE=docker
