--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "elliptic": "^6.5.4",
     "ethers": "^5.7.2",
+    "execa": "^8.0.1",
     "got": "^13.0.0",
     "graphql": "^16.6.0",
     "graphql-request": "^5.2.0"
