feat: excluded validators

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ ETHERFI_SC_PASSWORD=Password123!
 ETHERFI_SC_TEKU_PROPOSER_FILE=/teku_proposer_config.json
 # docker, kubernetes or none
 ETHERFI_SC_RESTART_MODE=docker
+# excluded ids or validator public keys
+ETHERFI_SC_EXCLUDED_VALIDATORS=0xa,0xb,0xc
