--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.4",
-    "bn.js": "^5.2.1",
-    "cron": "^2.3.0",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.3.1",
-    "elliptic": "^6.5.4",
-    "ethers": "^5.7.2",
-    "execa": "^8.0.1",
-    "got": "^13.0.0",
-    "graphql": "^16.6.0",
-    "graphql-request": "^5.2.0"
+    "@chainsafe/bls-keystore": "^3.1.0",
+    "axios": "^1.10.0",
+    "bn.js": "^5.2.2",
+    "cron": "^4.3.1",
+    "dotenv": "^16.5.0",
+    "elliptic": "^6.6.1",
+    "ethers": "^6.14.4",
+    "execa": "^9.6.0",
+    "got": "^14.4.7",
+    "graphql": "^16.11.0",
+    "graphql-request": "^7.2.0",
+    "joi": "^17.13.3"
   },
   "type": "module"
 }
