feat: finalize updated vault implementation

--- a/.env.example
+++ b/.env.example
@@ -17,11 +17,9 @@ ETHERFI_SC_KEY_STORAGE_MODE=disk
 ETHERFI_SC_DISK_OUTPUT_LOCATION=/_storage_
 # vault url if storage mode is vault
 ETHERFI_SC_VAULT_URL=https://some-vault-url.example.com
-# vault authentication mode. can be: token|kubernetes
-ETHERFI_SC_VAULT_AUTHENTICATION_MODE=kubernetes
-# vault client token, if authentication mode is token
-ETHERFI_SC_VAULT_CLIENT_TOKEN=some_client_token
-# vault kubernetes auth path, if authentication mode is kubernetes
-ETHERFI_SC_VAULT_KUBERNETES_AUTH_PATH=auth/kubernetes/login
-# vault kubernetes service account path, if authentication mode is kubernetes
-ETHERFI_SC_VAULT_KUBERNETES_SERVICE_ACCOUNT_PATH=/some/path/to/jwt.json
+# vault client token file path if storage mode is vault
+ETHERFI_SC_VAULT_CLIENT_TOKEN_PATH=/path/to/vault/token
+# vault secret mount path if storage mode is vault
+ETHERFI_SC_VAULT_VALIDATORS_SECRET_MOUNT_PATH=some-secrets-engine
+# path of validator key secrets in vault secrets engine given above if storage mode is vault
+ETHERFI_SC_VAULT_VALIDATORS_PATH=validators
