--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "got": "^14.4.7",
     "graphql": "^16.11.0",
     "graphql-request": "^7.2.0",
-    "joi": "^17.13.3"
+    "joi": "^17.13.3",
+    "lodash": "^4.17.21",
+    "yaml": "^2.8.0"
   },
   "type": "module"
 }
