feat: mtls for web3signer reload

--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,14 @@ ETHERFI_SC_PASSWORD=Password123!
 ETHERFI_SC_TEKU_PROPOSER_FILE=/teku_proposer_config.json
 # will not be created or maintained if undefined. only works for vault configs.
 ETHERFI_SC_WEB3SIGNER_CONFIG_FILE=/web3signer_config.yaml
-# optional. reloads web3signer on the given url if config file has changed. does nothing if ETHERFI_SC_WEB3SIGNER_CONFIG_FILE is not set.
+# optional. reloads web3signer on the given url if config file has changed. does nothing if ETHERFI_SC_WEB3SIGNER_CONFIG_FILE is not set. https if tls is used.
 ETHERFI_SC_WEB3SIGNER_RELOAD_URL=http://127.0.0.1:8080
+# the below are optional, even if web3signer reload url is set. will assume mtls if ALL tls options below are set, no tls if ANY tls option is not set.
+ETHERFI_SC_WEB3SIGNER_RELOAD_URL_CLIENT_KEY_PATH=/some/mtls/client-key.pem
+ETHERFI_SC_WEB3SIGNER_RELOAD_URL_CLIENT_KEY_PW_PATH=/some/mtls/client-key-pw.txt
+ETHERFI_SC_WEB3SIGNER_RELOAD_URL_CLIENT_CERT_PATH=/some/mtls/client-cert.pem
+ETHERFI_SC_WEB3SIGNER_RELOAD_URL_SERVER_CERT_PATH=/some/mtls/server-cert.pem
+ETHERFI_SC_WEB3SIGNER_RELOAD_URL_SERVER_TLS_NAME=some-server-name-0
 # docker, kubernetes or none
 ETHERFI_SC_RESTART_MODE=docker
 # excluded ids or validator public keys
