feat: contract scanning

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,19 @@
 ETHERFI_SC_IPFS_GATEWAY=https://ether-fi-mainnet.infura-ipfs.io/ipfs
 ETHERFI_SC_BIDDER=0xF88866238ecE28A41e050b04360423a5d1181d49
-ETHERFI_SC_GRAPH_URL=https://api.studio.thegraph.com/query/41778/etherfi-mainnet/0.0.4
+# DEPRECATED: Graph URL is no longer required with contract-based scanning
+# ETHERFI_SC_GRAPH_URL=https://api.studio.thegraph.com/query/41778/etherfi-mainnet/0.0.4
+# Required: Ethereum RPC endpoint for contract log scanning (can be Infura, Alchemy, or your own node)
+ETHERFI_SC_RPC_URL=https://mainnet.infura.io/v3/YOUR-PROJECT-ID
+# Optional: Contract addresses (defaults to mainnet addresses if not specified)
+ETHERFI_SC_AUCTION_MANAGER_CONTRACT=0x00C452aFFee3a17d9Cecc1Bcd2B8d5C7635C4CB9
+ETHERFI_SC_STAKING_MANAGER_CONTRACT=0x25e821b7197B146F7713C3b89B6A4D83516B912d
+ETHERFI_SC_NODES_MANAGER_CONTRACT=0x8B71140AD2e5d1E7018d2a7f8a288BD3CD38916F
+# Optional: Block to start scanning from (defaults to 17103480 - approximate mainnet launch block)
+ETHERFI_SC_START_BLOCK=17103480
+# Optional: Number of blocks to scan per chunk (default: 5000)
+ETHERFI_SC_SCAN_CHUNK_SIZE=5000
+# Optional: Maximum parallel RPC requests (default: 5, increase for faster scanning)
+ETHERFI_SC_MAX_PARALLEL_REQUESTS=5
 # can be: create|config - if create, secrets are needed for decrypt process. if read-only, auxiliary files are created only.
 ETHERFI_SC_MODE=create
 # below 2: required if ETHERFI_SC_MODE=create
@@ -36,3 +49,5 @@ ETHERFI_SC_VAULT_CLIENT_TOKEN_PATH=/path/to/vault/token
 ETHERFI_SC_VAULT_VALIDATORS_SECRET_MOUNT_PATH=some-secrets-engine
 # path of validator key secrets in vault secrets engine given above if storage mode is vault
 ETHERFI_SC_VAULT_VALIDATORS_PATH=validators
+# path of state config storage in vault secrets engine given above if storage mode is vault
+ETHERFI_SC_VAULT_STATE_PATH=state
